2008-03-24  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by NOBODY.
        
        SquirrelFish lives.
        
        Initial check-in of the code I've been carrying around. Lots of stuff
        doesn't work. Plus a bunch of empty files.

2008-03-22  Jesse Ruderman  <jruderman@gmail.com>

        Reviewed by Sam Weinig.  Landed by eseidel.
        
        Make testkjs flush stdout after printing.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/testkjs.cpp:
        (functionPrint):

2008-03-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Optimise lookup of Math, undefined, NaN and Infinity

        Added a method to JSVariableObject to allow us to inject DontDelete properties
        into the symbol table and localStorage.  This results in a 0.4% progression in
        SunSpider, with a 8% gain in math-partial-sums.

        * kjs/JSGlobalObject.cpp:
        (KJS::JSGlobalObject::reset):
        * kjs/JSVariableObject.h:
        (KJS::JSVariableObject::symbolTableInsert):

2008-03-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Global properties that use LocalStorage are not correctly listed as enumerable.

        The problem was caused by JSObject::getPropertyAttributes not being aware
        of the JSVariableObject SymbolTable.  The fix is to make getPropertyAttributes
        virtual and override in JSVariableObject.  This does not produce any performance
        regression.

        * JavaScriptCore.exp:
        * kjs/JSVariableObject.cpp:
        (KJS::JSVariableObject::getPropertyNames):
        (KJS::JSVariableObject::getPropertyAttributes):
        * kjs/JSVariableObject.h:
        * kjs/object.h:

2008-03-21  Arkadiusz Miskiewicz  <arekm@maven.pl>

        Webkit does not build on linux powerpc

        <http://bugs.webkit.org/show_bug.cgi?id=17019>

        Reviewed by David Kilzer.

        * wtf/TCSpinLock.h:
        (TCMalloc_SpinLock::Unlock):
