@@ -23,80 +23,6 @@
  *
  */
 
-/*
-
-Before landing:
-
-Function call should store offset of R, not R, since vector may reallocate. This probably solves most problems related to new evaluations in same global object, since they all occur beneath function calls
-    -- arguments object also holds a pointer into the register file -- probably needs to be indirect index, instead
-    -- activation objects also hold pointers into the register file -- ditto
-    -- lists, if we decide not to make them copy
-
-Current function needs to be in the register file -- gets marked automatically, marks the CodeBlock's constant pool
-
-Must mark register file -- probably use zero fill plus type tagging to get it right
-
-Pointers to registers and labels become invalid if the register or label vector resizes.
-
-GC mark for constant pools
-
-GC mark for possibly uninitialized register file
-
-Add relevant files to AllInOneFile.cpp.
-
-remove irrelevent files
-
-What things should go in dedicated local variables? CodeBlock::jsValues? CodeBlock::identifiers?
-
-Before switching:
-
-global code should only emit "overwrite var with undefined" if the var doesn't exist already.
-
-Global code needs to deal with new vars being added. Stupid solution: always allocate a new vector, add new, then copy old. Better solution: provide pre-capacity to the existing vector. Alternative solution: just renumber the vars -- does any code depend on the old numbers? 
-
-const -- has to go in the symbol table.
-
-VarStatementNode should just be nixed in favor of AssignmentNode.
-
-Remove ::execute, ::evaluate, ::optimizeVariableAccess
-
-
-Future optimizations:
-
-The introduction of op_new_func, op_call, and op_ret regressed the simple for loop tests by about 25%. Seems to have to do with the fact that these opcodes call arbitrary external functions.
-
-Use RefPtr to indicate use of register -- moves to un-refed registers should be stripped or consolidated to other instructions.
-    - i++ => ++i
-    - less, jtrue => jless
-
-emit actual instructions for var and function initialization -- often, there will be 0; often, the var initialization will be dead code. any read of variable before init can statically become "load undefined".
-
-    a single run of SunSpider performs 1,191,803 var initializations
-
-    -1 means "never happend"
-    
-    var buckets: [846461] [40445] [350197] [9412] [7531] [50] [9] [178] [35000] [3] [1022] [3] [4499] [-1] [1353] [-1] [-1] [1851] [-1] [0] [-1] [0] [-1] [0] [-1] [0] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] 
-
-    fun buckets: [1297008] [7] [3] [2] [1] [0] [-1] [0] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [0] [-1] [1] [-1] [-1] [0] [-1] [0] [-1] [-1] [-1] [-1] [-1] [999] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] [-1] ]
-
-for resolve-evaluate-put, we can have a { DontCare, Clean, Dirty } switch -- get slot and if DontCare, set clean, evaluate, set slot if clean
-
-instead of branching to see if you've emitted code, just start out with a stub that does that emitting when invoked.
-
-single, shared constant pool
-
-At least for loops with fewer iterations it would probably be a win to duplicate the loop condition at the start and end of the loop
-
-Perhaps we should have a distinguished "condition code" register for expressions in a boolean context. For relational and logical operators we can output directly to the condition code register, for other opcodes you get an extra instruction. Jump instructions can read implicitly from the condition code. That avoids the less writing to r0, it just puts a bool in the condition code register.
-
-Can't you just make all opcodes have variants that use constant table operands directly?
-
-A named function expression can just enter its name into the symbol table instead of adding an object to the scope chain.
-
-Shrink instructions -- usually, don't need a whole word to store int values. Perhaps use tagging of opcodes to encode the first operand. Special work-around instructions when whole words are needed
-
-*/
-
 #ifndef NODES_H_
 #define NODES_H_
 
